# mwra-biobot

./: .gitignore  README.md  mwra-biobot-tidied.csv  mwra-biobot.csv  plot.R  pyproject.toml  tidy.R  update.sh
mwra_data/: extract.py
